--- a/resources/styles.css
+++ b/resources/styles.css
@@ -2,7 +2,6 @@
 * {
     box-sizing: border-box;
     justify-content: center;
-    /* justify-items: center; */
   }
 
 body {
@@ -15,24 +14,26 @@ body {
     "header header header header"
     "aside main main main"
     "aside main main main"
-    "aside footer footer footer";
+    "footer footer footer footer";
+    background-color: #71715c;
+    
 }
 
 aside {
     grid-area: aside;
-    background-color: aquamarine;
+    background-color: #656544;
+    border:outset;
 }
 header {
     grid-area: header;
-    background-color: rgb(106, 147, 134);
+    border-bottom: 1px solid;
 }
 main {
     grid-area: main;
-    background-color: rgb(99, 169, 87);
 }
 footer {
     grid-area: footer;
-    background-color: rgb(88, 80, 138);
+    background-color: #6f6f3b;
 }
 /* Tablet Grid layout */
 @media only screen and (max-width: 768px) {
@@ -98,6 +99,32 @@ footer {
 }
 
 /* Content Styling Section */
+/* Header */
+ul {
+    display: flex;
+    gap: 3rem;
+}
+header {
+    align-content: center;
+}
+a {
+    color: black;
+}
+ul li {
+    list-style: none;
+    cursor: pointer;
+    font-size: 1.3rem;
+}
+a:hover {
+    text-decoration: none;
+    font-size: 1.35rem;
+}
+a:active {
+    color: rgb(114, 7, 7);
+    font-size: 1.3rem;
+}
+
+/* main */
 .container {
     display: flex;
     flex-wrap: wrap;
@@ -105,10 +132,51 @@ footer {
 }
 
 .image-container {
-    width: 300px;
+    /* width: 19rem; */
     height: auto;
-    border: 1px solid;
+    border: 0.1rem solid black;
+    border-radius: 20%;
+    border-style:outset;
     justify-items: center;
     overflow: hidden;  
+    box-shadow: 1rem 2rem 3rem;
+}
+.row1 {
+    border-radius: 50%;
+    border-style: hidden;
 }
 
+.note {
+    justify-items: center;
+    text-align: center;
+}
+#note h2 {
+    text-align: center;
+}
+/* All headings */
+h1, h2, h3, a {
+    font-family: "Abril Fatface", serif;
+    font-weight: 400;
+    font-style: normal;
+    text-align: center;
+}
+p, ol li {
+    font-family: "Rubik", serif;
+    font-weight: 400;
+    font-style: normal;
+    line-height: 1.6;
+    font-size: 1.2rem;
+}
+.box {
+    margin-bottom: 2rem;
+}
+table, th, td{
+    border: 1px solid;
+}
+
+footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 2rem;
+}
